--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,288 @@
     transform: rotate(360deg);
   }
 }
+* {
+  margin: 0;
+  /* border: 1px solid rebeccapurple; */
+}
+body {
+  width: 1440px;
+  height: 2829px;
+  
+}
+
+nav {
+  width: 887px;
+  height: 78px;
+  margin: 21px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 45px;
+}
+
+nav img {
+  display: block;
+  width: 202px;
+  height: 76px;
+}
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+nav ul {
+  display: flex;
+  width: 640px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav ul li {
+  display: block;
+}
+
+nav ul li a {
+  font-weight: bold;
+}
+ main .hero {
+  width: 100%;
+  height: 406px;
+  display: flex;
+  background-color: #6E6F6E;
+  justify-content: center;
+  gap: 45px;
+ }
+
+ main .hero div {
+  width: 422px;
+  height: 331px;
+  align-self: center;
+  text-align: left;
+  /* overflow: auto; */
+  display: flex;
+  flex-direction: column;
+  position: relative;
+ }
+
+ main .hero div h1 {
+  font-size: 2em;
+ }
+main .hero div p.description {
+  margin-top: 45px; 
+}
+
+button {
+  width: 200px;
+  height: 60px;
+  border: none;
+  color: #fff;
+  text-decoration: none;
+  background-color: #000;
+  border-radius: 5px;
+}
+
+main .hero div button {
+  position: absolute;
+  bottom: 0;
+}
+
+ main .hero img {
+  width: 375px;
+  height: 325px;
+  margin-top: 10px;
+ }
+
+ main .highlights {
+  width: 858px;
+  height: 555px;
+  margin: 45px auto;
+  position: relative;
+ }
+
+h3{
+  font-size: 2em;
+ }
+
+ main .highlights div {
+  display: flex;
+  justify-content: space-between;
+ }
+
+ main .highlights .cards {
+  width: 858px;
+  height: 439px;
+  position: absolute;
+  bottom: 0;
+
+ }
+
+ main .highlights .cards .card {
+  width: 264.67px;
+  height: 439px; 
+  background-color: #c4c4c4;
+  border-radius: 5px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 2fr 1fr 2fr 1fr;
+  row-gap: 5px;
+  align-items: center;
+  text-align: left;
+ }
+
+
+ main .highlights .cards .card img {
+  width: 100%;
+  height: calc(439px * 0.4);
+  grid-area: 1/1/2/3;
+  background-size:cover;
+  border-radius: 5px;
+  /* border: 2px solid red; */
+ }
+
+ main .highlights .cards .card p,a {
+  padding: 10px;
+ }
+ main .highlights .cards .card p {
+  font-size: 1rem;
+
+ }
+ main .highlights .cards .card .name {
+  grid-area: 2/1/3/2;
+ }
+ main .highlights .cards .card .price {
+  grid-area: 2/2/3/3;
+ }
+ main .highlights .cards .card .description {
+  grid-area: 3/1/4/3;
+ }
+ main .highlights .cards .card a {
+  grid-area: 4/1/5/3;
+ }
+
+ main .testimonials {
+  width: 100%;
+  height: 590px;
+  background-color: #d6d6d6;
+ }
+
+ main .testimonials h3 {
+  font-size: 2em;
+  padding: 90px;
+ }
+
+ main .testimonials .rates {
+  margin: 0 auto;
+  width: 858px;
+  display: flex;
+  justify-content: space-around;
+  column-gap: 10px;
+  text-align: left;
+ }
+
+ main .testimonials .rates .rate {
+  width: 200px;
+  height: 175px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+ }
+
+ main .testimonials .rates .rate div {
+  display: flex;
+  justify-content: space-between;
+ }
+
+ main .testimonials .rates .rate div img{
+  width: 47px;
+  height: 46px;
+  background-size: cover;
+ }
+
+ main .about {
+  width: 869px;
+  height: 468px;
+  margin: 40px auto;
+  text-align: left;
+  display: flex;
+  justify-content: space-between;
+ }
+
+ main .about .content {
+  width: 373px;
+  height: 468px;
+ }
+
+ main .about .content p:last-child {
+  padding-top: 45px;
+ }
+ main .about .imgs {
+  width: 496px;
+  height: 468px;
+  background-size: cover;
+  position: relative;
+ }
+ main .about img {
+  width: 276px;
+  height: 333px;
+  background-size: cover;
+ }
+ main .about img:first-child {
+  position: absolute;
+  top: 60px;
+  left: 20px;
+
+ }
+ main .about img:last-child {
+  position: absolute;
+  right: 0px;
+ }
+
+ footer {
+  width: 1440px;
+  height:417px;
+  background-color: #d6d6d6;
+  display: flex;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  text-align: left;
+ }
+
+ footer img, footer div {
+  width: 162px;
+  height: 278px;
+  margin-right: 10px;;
+ }
+
+ footer img {
+  background-size: cover;
+ }
+
+ footer div p {
+  font-weight: bold;
+ }
+
+ footer div ul, footer div ul *{
+  margin-left: 0px;
+  padding-left: 0px;
+ }
+
+
+
+
+
+
+
+
+
+
+
+
+
